docs/api/qiskit/0.29/qiskit.quantum_info.CNOTDihedral.md
# CNOTDihedral

`CNOTDihedral(data=None, num_qubits=None, validate=True)`

Bases: `qiskit.quantum_info.operators.base_operator.BaseOperator`, `qiskit.quantum_info.operators.mixins.adjoint.AdjointMixin`

An N-qubit operator from the CNOT-Dihedral group.

> The CNOT-Dihedral group is generated by the quantum gates, [`CXGate`](qiskit.circuit.library.CXGate#qiskit.circuit.library.CXGate "qiskit.circuit.library.CXGate"), [`TGate`](qiskit.circuit.library.TGate#qiskit.circuit.library.TGate "qiskit.circuit.library.TGate"), and [`XGate`](qiskit.circuit.library.XGate#qiskit.circuit.library.XGate "qiskit.circuit.library.XGate").
>
> **Representation**
>
> An $N$-qubit CNOT-Dihedral operator is stored as an affine function and a phase polynomial, based on the convention in references \[1, 2].
>
> The affine function consists of an $N \times N$ invertible binary matrix, and an $N$ binary vector.
>
> The phase polynomial is a polynomial of degree at most 3, in $N$ variables, whose coefficients are in the ring Z\_8 with 8 elements.
>
> ```python
> from qiskit import QuantumCircuit
> from qiskit.quantum_info import CNOTDihedral
>
> circ = QuantumCircuit(3)
> circ.cx(0, 1)
> circ.x(2)
> circ.t(1)
> circ.t(1)
> circ.t(1)
> elem = CNOTDihedral(circ)
>
> # Print the CNOTDihedral element
> print(elem)
> ```
>
> ```python
> phase polynomial = 
> 0 + 3*x_0 + 3*x_1 + 2*x_0*x_1
> affine function = 
>  (x_0,x_0 + x_1,x_2 + 1)
> ```

**Circuit Conversion**

> CNOTDihedral operators can be initialized from circuits containing *only* the following gates: [`IGate`](qiskit.circuit.library.IGate#qiskit.circuit.library.IGate "qiskit.circuit.library.IGate"), [`XGate`](qiskit.circuit.library.XGate#qiskit.circuit.library.XGate "qiskit.circuit.library.XGate"), [`YGate`](qiskit.circuit.library.YGate#qiskit.circuit.library.YGate "qiskit.circuit.library.YGate"), [`ZGate`](qiskit.circuit.library.ZGate#qiskit.circuit.library.ZGate "qiskit.circuit.library.ZGate"), [`TGate`](qiskit.circuit.library.TGate#qiskit.circuit.library.TGate "qiskit.circuit.library.TGate"), [`TdgGate`](qiskit.circuit.library.TdgGate#qiskit.circuit.library.TdgGate "qiskit.circuit.library.TdgGate") [`SGate`](qiskit.circuit.library.SGate#qiskit.circuit.library.SGate "qiskit.circuit.library.SGate"), [`SdgGate`](qiskit.circuit.library.SdgGate#qiskit.circuit.library.SdgGate "qiskit.circuit.library.SdgGate"), [`CXGate`](qiskit.circuit.library.CXGate#qiskit.circuit.library.CXGate "qiskit.circuit.library.CXGate"), [`CZGate`](qiskit.circuit.library.CZGate#qiskit.circuit.library.CZGate "qiskit.circuit.library.CZGate"), [`SwapGate`](qiskit.circuit.library.SwapGate#qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate"). They can be converted back into a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit"), or [`Gate`](qiskit.circuit.Gate#qiskit.circuit.Gate "qiskit.circuit.Gate") object using the [`to_circuit()`](qiskit.quantum_info.CNOTDihedral.to_circuit#qiskit.quantum_info.CNOTDihedral.to_circuit "qiskit.quantum_info.CNOTDihedral.to_circuit") or `to_instruction()` methods respectively. Note that this decomposition is not necessarily optimal in terms of number of gates if the number of qubits is more than two.
>
> CNOTDihedral operators can also be converted to [`Operator`](qiskit.quantum_info.Operator#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator") objects using the [`to_operator()`](qiskit.quantum_info.CNOTDihedral.to_operator#qiskit.quantum_info.CNOTDihedral.to_operator "qiskit.quantum_info.CNOTDihedral.to_operator") method. This is done via decomposing to a circuit, and then simulating the circuit as a unitary operator.
>
> **References:**
>
> 1.  Shelly Garion and Andrew W. Cross, *Synthesis of CNOT-Dihedral circuits with optimal number of two qubit gates*, [Quantum 4(369), 2020](https://quantum-journal.org/papers/q-2020-12-07-369/)
> 2.  Andrew W. Cross, Easwar Magesan, Lev S. Bishop, John A. Smolin and Jay M. Gambetta, *Scalable randomised benchmarking of non-Clifford gates*, npj Quantum Inf 2, 16012 (2016).

Initialize a CNOTDihedral operator object.

**Parameters**

*   **data** ([*CNOTDihedral*](qiskit.ignis.verification.CNOTDihedral#qiskit.ignis.verification.CNOTDihedral "qiskit.ignis.verification.CNOTDihedral")  *or*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *or*[*Instruction*](qiskit.circuit.Instruction#qiskit.circuit.Instruction "qiskit.circuit.Instruction")) – Optional, operator to initialize.
*   **num\_qubits** (*int*) – Optional, initialize an empty CNOTDihedral operator.
*   **validate** (*bool*) – if True, validates the CNOTDihedral element.

**Raises**

*   **QiskitError** – if the type is invalid.
*   **QiskitError** – if validate=True and the CNOTDihedral element is invalid.

## Methods

|                                                                                                                                                                       |                                                                            |
| --------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------- |
| [`adjoint`](qiskit.quantum_info.CNOTDihedral.adjoint#qiskit.quantum_info.CNOTDihedral.adjoint "qiskit.quantum_info.CNOTDihedral.adjoint")                             | Return the adjoint of the Operator.                                        |
| [`compose`](qiskit.quantum_info.CNOTDihedral.compose#qiskit.quantum_info.CNOTDihedral.compose "qiskit.quantum_info.CNOTDihedral.compose")                             | Return the operator composition with another CNOTDihedral.                 |
| [`conjugate`](qiskit.quantum_info.CNOTDihedral.conjugate#qiskit.quantum_info.CNOTDihedral.conjugate "qiskit.quantum_info.CNOTDihedral.conjugate")                     | Return the conjugate of the CNOTDihedral.                                  |
| [`copy`](qiskit.quantum_info.CNOTDihedral.copy#qiskit.quantum_info.CNOTDihedral.copy "qiskit.quantum_info.CNOTDihedral.copy")                                         | Make a deep copy of current operator.                                      |
| [`dot`](qiskit.quantum_info.CNOTDihedral.dot#qiskit.quantum_info.CNOTDihedral.dot "qiskit.quantum_info.CNOTDihedral.dot")                                             | Return the right multiplied operator self \* other.                        |
| [`expand`](qiskit.quantum_info.CNOTDihedral.expand#qiskit.quantum_info.CNOTDihedral.expand "qiskit.quantum_info.CNOTDihedral.expand")                                 | Return the reverse-order tensor product with another CNOTDihedral.         |
| [`input_dims`](qiskit.quantum_info.CNOTDihedral.input_dims#qiskit.quantum_info.CNOTDihedral.input_dims "qiskit.quantum_info.CNOTDihedral.input_dims")                 | Return tuple of input dimension for specified subsystems.                  |
| [`output_dims`](qiskit.quantum_info.CNOTDihedral.output_dims#qiskit.quantum_info.CNOTDihedral.output_dims "qiskit.quantum_info.CNOTDihedral.output_dims")             | Return tuple of output dimension for specified subsystems.                 |
| [`power`](qiskit.quantum_info.CNOTDihedral.power#qiskit.quantum_info.CNOTDihedral.power "qiskit.quantum_info.CNOTDihedral.power")                                     | Return the compose of a operator with itself n times.                      |
| [`reshape`](qiskit.quantum_info.CNOTDihedral.reshape#qiskit.quantum_info.CNOTDihedral.reshape "qiskit.quantum_info.CNOTDihedral.reshape")                             | Return a shallow copy with reshaped input and output subsystem dimensions. |
| [`tensor`](qiskit.quantum_info.CNOTDihedral.tensor#qiskit.quantum_info.CNOTDihedral.tensor "qiskit.quantum_info.CNOTDihedral.tensor")                                 | Return the tensor product with another CNOTDihedral.                       |
| [`to_circuit`](qiskit.quantum_info.CNOTDihedral.to_circuit#qiskit.quantum_info.CNOTDihedral.to_circuit "qiskit.quantum_info.CNOTDihedral.to_circuit")                 | Return a QuantumCircuit implementing the CNOT-Dihedral element.            |
| [`to_instruction`](qiskit.quantum_info.CNOTDihedral.to_instruction#qiskit.quantum_info.CNOTDihedral.to_instruction "qiskit.quantum_info.CNOTDihedral.to_instruction") | Return a Gate instruction implementing the CNOTDihedral object.            |
| [`to_matrix`](qiskit.quantum_info.CNOTDihedral.to_matrix#qiskit.quantum_info.CNOTDihedral.to_matrix "qiskit.quantum_info.CNOTDihedral.to_matrix")                     | Convert operator to Numpy matrix.                                          |
| [`to_operator`](qiskit.quantum_info.CNOTDihedral.to_operator#qiskit.quantum_info.CNOTDihedral.to_operator "qiskit.quantum_info.CNOTDihedral.to_operator")             | Convert to an Operator object.                                             |
| [`transpose`](qiskit.quantum_info.CNOTDihedral.transpose#qiskit.quantum_info.CNOTDihedral.transpose "qiskit.quantum_info.CNOTDihedral.transpose")                     | Return the transpose of the CNOTDihedral.                                  |

## Attributes

### dim

Return tuple (input\_shape, output\_shape).

### num\_qubits

Return the number of qubits if a N-qubit operator or None otherwise.

### qargs

Return the qargs for the operator.

### settings

Return operator settings.
